WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13667
REGRESSION (
r21363
): Focus ring too tall
https://bugs.webkit.org/show_bug.cgi?id=13667
Summary
REGRESSION (r21363): Focus ring too tall
mitz
Reported
2007-05-10 15:58:17 PDT
See URL. Also responsible for this failure <
http://build.webkit.org/results/post-commit-pixel-powerpc-mac-os-x/4047/editing/pasteboard/paste-pre-002-diffs.html
> and a few others.
Attachments
Fix focus rings for continuations to account for collapsing through other blocks when inlines are empty
(1.21 KB, patch)
2007-05-10 16:08 PDT
,
Dave Hyatt
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2007-05-10 16:08:19 PDT
Created
attachment 14478
[details]
Fix focus rings for continuations to account for collapsing through other blocks when inlines are empty A block in the middle of a continuation should only include its collapsed margins if they aren't going to collapse beyond the inlines above/below. This is covered by existing layout tests (even the test I added to fix the original bug showed this problem, I just didn't notice it), sigh. This is purely a pixel issue, so isn't caught except by pixel layout tests.
Beth Dakin
Comment 2
2007-05-10 16:16:05 PDT
Comment on
attachment 14478
[details]
Fix focus rings for continuations to account for collapsing through other blocks when inlines are empty r=me!
Dave Hyatt
Comment 3
2007-05-10 16:20:04 PDT
Fixed
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug