        Fix for:

<rdar://problem/5195272> REGRESSION: broke outline rings for continuations
        with empty inline containers

        http://bugs.webkit.org/show_bug.cgi?id=13667

        Make sure to only include collapsed top/bottom margins of the block portion
        of the continuation if we know for sure that we have inline line boxes before
        and after that would prevent the collapse from going further.

        In plain English: the focus rings were too tall. :)

        Reviewed by beth

        * rendering/RenderFlow.cpp:
        (WebCore::RenderFlow::addFocusRingRects):



Canonical link: https://commits.webkit.org/17837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21385 268f45cc-cd09-0410-ab3c-d52691b4dbfc